<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:id="@+id/activity_book"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_book_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Đất rừng phương nam"
            android:background="@drawable/square_radius_10"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:id="@+id/thumbnail_book_image_view"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:src="@drawable/ic_image_black_24dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:shrinkColumns="*"
            android:layout_marginBottom="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:layout_column="0"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textSize="15sp"
                        android:background="@drawable/square_radius_1"
                        android:textStyle="bold"
                        android:textColor="@color/textColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_book"
                        android:textSize="15sp"
                        android:padding="5dp"
                        android:layout_marginLeft="5dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/category_book_text_view"
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Truyện ngắn"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:layout_gravity="right|center_vertical" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:layout_column="0"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2"
                        android:textSize="15sp"
                        android:background="@drawable/square_radius_2"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author_book"
                        android:textSize="15sp"
                        android:padding="5dp"
                        android:layout_marginLeft="5dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/author_book_text_view"
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Đoàn Giỏi"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:layout_gravity="right|center_vertical" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:layout_column="0"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3"
                        android:textSize="15sp"
                        android:background="@drawable/square_radius_3"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/publisher_book"
                        android:textSize="15sp"
                        android:padding="5dp"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/textView" />

                </LinearLayout>

                <TextView
                    android:id="@+id/publisher_book_text_view"
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NXB Giáo Dục"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:layout_gravity="right|center_vertical" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:layout_column="0"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4"
                        android:textSize="15sp"
                        android:background="@drawable/square_radius_4"
                        android:textStyle="bold"
                        android:textColor="@color/textColorTertiary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/supplier_book"
                        android:textSize="15sp"
                        android:padding="5dp"
                        android:layout_marginLeft="5dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/supplier_book_text_view"
                    android:layout_column="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NXB Giáo Dục"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:layout_gravity="right|center_vertical" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:layout_column="0"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:textSize="15sp"
                        android:background="@drawable/square_radius_1"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_book"
                        android:textSize="15sp"
                        android:padding="5dp"
                        android:layout_marginLeft="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_column="1"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_horizontal">

                    <TextView
                        android:id="@+id/sale_book_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="20.000đ"
                        android:textSize="15sp"
                        android:background="@drawable/square_radius_6"
                        android:textColor="@color/textColor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sale_off_book_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="15.000đ"
                        android:textSize="15sp"
                        android:background="@drawable/square_radius_5"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"
                        android:layout_marginLeft="5dp"/>

                </LinearLayout>

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/buy_book_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Mua"
                android:background="@drawable/square_radius_7"
                android:drawableLeft="@drawable/ic_shopping_cart_white_24dp"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <Button
                android:id="@+id/preview_book_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_book_white_24dp"
                android:text="Đọc thử"
                android:background="@drawable/square_radius_9"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add_favorite_book_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_favorite_border_white_24dp"
                android:text="Yêu thích"
                android:background="@drawable/square_radius_8"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tóm tắt tác phẩm"
            android:textSize="23sp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/summary_book_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:textAlignment="gravity"
            android:background="@drawable/square_radius_10"
            android:text="Thực sự lay động trái tim người đọc bằng sự chân thật và chiều sâu nhân văn trong từng chi tiết. Cậu bé Alexei lao lực để kiếm sống, đau đớn trước nhưng trận đòn rơi, hạnh phúc trước tình thân của bà, hồn nhiên giữ những người bạn nhỏ, kiên cường vượt qua từng khó khăn và cả khát vọng được đến gần hơn với tri thức,… tất cả những hình ảnh ấy đều để lại ấn tượng sâu sắc trong lòng người đọc và thuyết phục người đọc rằng: những sóng gió quật ngang cuộc đời không làm ta ngã đổ, mà ngược lại, nó làm cho ta lớn mạnh để theo đuổi ước mơ của mình."/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sách cùng chủ đề"
            android:textSize="23sp"
            android:layout_marginBottom="10dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/related_books_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/content_book"
            android:scrollbars="none" />

    </LinearLayout>
</ScrollView>

